hover does not apply outline styles if there is also a text-decoration style https://bugs.webkit.org/show_bug.cgi?id=282009 <rdar://problem/138637831>

Reviewed by Antti Koivisto.

Incorrectly early return when text-decoration is present but it requires no layout (overflow computation). We should only return with 'true' here.

* LayoutTests/fast/repaint/missing-repaint-when-text-decoration-is-present-expected.txt: Added.
* LayoutTests/fast/repaint/missing-repaint-when-text-decoration-is-present.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeAffectsVisualOverflow const):

Canonical link: https://commits.webkit.org/285763@main